feat: init tailwind

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /*!
-Theme Name: WordPack
-Theme URI: http://underscores.me/
+Theme Name: WordWind
+Theme URI: 
 Author: Tommaso Costantini
-Author URI: http://tommasocostantini.it
+Author URI: https://tommasocostantini.it
 Description: Description
-Version: 1.0.2
-Tested up to: 5.4
-Requires PHP: 5.6
+Version: 1.0.0
+Tested up to: 8.1
+Requires PHP: 8.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: wordpack
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: 
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
