fix: wordpack references

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Tested up to: 8.1
 Requires PHP: 8.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: wordpack
+Text Domain: wordwind
 Tags: 
 
 This theme, like WordPress, is licensed under the GPL.
